# elgoog

./: .gitignore  CONTRACT.md  Makefile  PROGRESS.md  README.md  RELEASE.md  RELEASE_STATUS.md  ROADMAP.md  elgoog.py  elgoog_server.py  pyproject.toml
.github/workflows/: tests.yml
examples/: README.md  example-recover-local-repo-medium.md  example-session-repo-flow.md  example-understand-local-repo-small.md
tests/: test_elgoog.py
ui/: app.js  index.html  styles.css
